--- a/index.html
+++ b/index.html
@@ -4,61 +4,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ITstudio</title>
+    <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css "
+        integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg =="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
         <nav class="nav">
             <ul class="nav-list">
-                <li class="nav-list-item"><a href="" class="nav-list-link"></a></li>
-                <li class="nav-list-item"><a href="" class="nav-list-link"></a></li>
-                <li class="nav-list-item"><a href="" class="nav-list-link"></a></li>
-                <li class="nav-list-item"><a href="" class="nav-list-link"></a></li>
-                <li class="nav-list-item"><a href="" class="nav-list-link"></a></li>
+                <li class="nav-list-item"><a href="" class="nav-list-link">Головна</a></li>
+                <li class="nav-list-item"><a href="" class="nav-list-link">Наші проекти</a></li>
+                <li class="nav-list-item"><a href="" class="nav-list-link">Послуги</a></li>
+                <li class="nav-list-item"><a href="" class="nav-list-link">Новини</a></li>
+                <li class="nav-list-item"><a href="" class="nav-list-link">Контакти</a></li>
             </ul>
-            <span class="nav-span"></span>
         </nav>
+    </header>
         <main>
 
             <section class="hero">
-                <h1 class="hero-title"></h1>
-                <p class="hero-text"></p>
-                <button class="hero-btn"></button>
+                <p class="hero-text">Передова IT студія</p>
+                <h1 class="hero-title">Ми створюємо легкі рішення важких задач і проблем</h1>
+                <button class="hero-btn">Наші проекти</button>
             </section>
 
             <section class="services">
                 <div class="services-wrap">
-                <h2 class="services-title"></h2>
-                <p class="services-text"></p>
+                <h2 class="services-title">Ми створюємо мобільні додатки для великих корпорацій</h2>
+                <p class="services-text">Lorem Ipsum - це текст-"риба", що часто використовується в пресі та веб-дизайні. Lorem Ipsum є стандартною "рибою" для
+                текстів на латиниці з початку XVI ст.</p>
                 
                     <span class="services-span">
                         <svg class="services-svg">
                             <use></use>
                         </svg>
-                        <p class="services-text"></p>
-                        <p class="services-text"></p>
+                        <p class="services-text1">Створення сайтів</p>
+                        <p class="services-text">Lorem Ipsum - це текст-"риба", часто використовує у пресі та веб-дизайні.</p>
                     </span>
                     <span class="services-span">
                         <svg class="services-svg">
                             <use></use>
                         </svg>
-                        <p class="services-text"></p>
-                        <p class="services-text"></p>
+                        <p class="services-text1">Створення сайтів</p>
+                        <p class="services-text">Lorem Ipsum - це текст-"риба", часто використовує у пресі та веб-дизайні.</p>
                     </span>
                     <span class="services-span">
                         <svg class="services-svg">
                             <use></use>
                         </svg>
-                        <p class="services-text"></p>
-                        <p class="services-text"></p>
+                        <p class="services-text1">Створення сайтів</p>
+                        <p class="services-text">Lorem Ipsum - це текст-"риба", часто використовує у пресі та веб-дизайні.</p>
                     </span>
-                    <button class="services-btn"></button>
+                    <button class="services-btn">Всі послуги</button>
                 </div>
             </section>
 
             <section class="about-us">
-                <h3 class="about-us-title"></h3>
-                <p class="about-us-text"></p>
-                <a href="" class="about-us-link"></a>
+                <h3 class="about-us-title">Високі стандарти розробки</h3>
+                <p class="about-us-text">Lorem Ipsum - це текст-"риба", що часто використовується в пресі та веб-дизайні. Lorem Ipsum є стандартною "рибою" для
+                текстів на латиниці з початку XVI ст.</p>
+                <a href="" class="about-us-link">Детальніше про компанію</a>
                 <svg class="about-us-svg">
                     <use></use>
                 </svg>
@@ -68,75 +76,76 @@
                         <svg class="about-us-list-svg">
                             <use></use>
                         </svg>
-                        <p class="about-us-text1"></p>
-                        <p class="about-us-text"></p>
+                        <p class="about-us-text1">125</p>
+                        <p class="about-us-text">Our projects</p>
                     </li>
                     <li class="about-us-list-item">
                         <svg class="about-us-list-svg">
                             <use></use>
                         </svg>
-                        <p class="about-us-text1"></p>
-                        <p class="about-us-text"></p>
+                        <p class="about-us-text1">125</p>
+                        <p class="about-us-text">Our projects</p>
                     </li>
                     <li class="about-us-list-item">
                         <svg class="about-us-list-svg">
                             <use></use>
                         </svg>
-                        <p class="about-us-text1"></p>
-                        <p class="about-us-text"></p>
+                        <p class="about-us-text1">125</p>
+                        <p class="about-us-text">Our projects</p>
                     </li>
                     <li class="about-us-list-item">
                         <svg class="about-us-list-svg">
                             <use></use>
                         </svg>
-                        <p class="about-us-text1"></p>
-                        <p class="about-us-text"></p>
+                        <p class="about-us-text1">125</p>
+                        <p class="about-us-text">Our projects</p>
                     </li>
                     <li class="about-us-list-item">
                         <svg class="about-us-list-svg">
                             <use></use>
                         </svg>
-                        <p class="about-us-text1"></p>
-                        <p class="about-us-text"></p>
+                        <p class="about-us-text1">125</p>
+                        <p class="about-us-text">Our projects</p>
                     </li>
                 </ul>
             </section>
 
             <section class="all-services">
                 <div class="all-services-wrap">
-                <h4 class="all-services-title"></h4>
-                <button class="all-services-btn"></button>
-                    <span class="all-services-span">
+                <h4 class="all-services-title">Наші роботи на яких ми спеціалізуємось</h4>
+                <button class="all-services-btn">Всі послуги</button>
+                    <div class="all-services-div">
                         <svg class="all-services-svg">
                             <use></use>
                         </svg>
-                        <p class="all-services-text1"></p>
-                        <p class="all-services-text"></p>
-                        <a href="" class="all-services-link"></a>
-                    </span>
-                    <span class="all-services-span">
+                        <p class="all-services-text1"><span class="all-services-span">01.</span>Дослідження і упаковка</p>
+                        <p class="all-services-text">Lorem Ipsum - це текст-"риба", що часто використовується в пресі та веб-дизайні. Lorem Ipsum є стандартною "рибою" для текстів на латиниці з початку XVI ст.</p>
+                        <a href="" class="all-services-link">Детальніше</a>
+                    </div>
+                    <div class="all-services-div">
                         <svg class="all-services-svg">
                             <use></use>
                         </svg>
-                        <p class="all-services-text1"></p>
-                        <p class="all-services-text"></p>
-                        <a href="" class="all-services-link"></a>
-                    </span>
-                    <span class="all-services-span">
+                        <p class="all-services-text1"><span class="all-services-span">01.</span>Дослідження і упаковка</p>
+                        <p class="all-services-text">Lorem Ipsum - це текст-"риба", що часто використовується в пресі та веб-дизайні. Lorem Ipsum є стандартною "рибою" для текстів на латиниці з початку XVI ст.</p>
+                        <a href="" class="all-services-link">Детальніше</a>
+                    </div>
+                    <div class="all-services-div">
                         <svg class="all-services-svg">
                             <use></use>
                         </svg>
-                        <p class="all-services-text1"></p>
-                        <p class="all-services-text"></p>
-                        <a href="" class="all-services-link"></a>
-                    </span>
+                        <p class="all-services-text1"><span class="all-services-span">01.</span>Дослідження і упаковка</p>
+                        <p class="all-services-text">Lorem Ipsum - це текст-"риба", що часто використовується в пресі та веб-дизайні. Lorem Ipsum є стандартною "рибою" для текстів на латиниці з початку XVI ст.</p>
+                        <a href="" class="all-services-link">Детальніше</a>
+                    </div>
                     <span class="all-services-span_"></span>
                 </div>
             </section>
 
             <section class="all-projects">
-                <h5 class="all-projects-title"></h5>
-                <p class="all-projects-text"></p>
+                <h5 class="all-projects-title">Наші проекти</h5>
+                <p class="all-projects-text">Lorem Ipsum - це текст-"риба", що часто використовується в пресі та веб-дизайні. Lorem Ipsum є стандартною "рибою" для
+                текстів на латиниці з початку XVI ст.</p>
                 <svg class="all-projects-svg">
                     <use></use>
                 </svg>
@@ -149,60 +158,59 @@
                 <svg class="all-projects-svg">
                     <use></use>
                 </svg>
-                <button class="all-projects-btn"></button>
+                <button class="all-projects-btn">Всі проекти</button>
             </section>
 
             <section class="video">
-                <h6 class="video-title"></h6>
-                <p class="video-text"></p>
-                <svg>
+                <h6 class="video-title">Відео про нашу роботу</h6>
+                <p class="video-text">Просто подивіться, як ми працюємо</p>
+                <svg class="video-svg">
                     <use></use>
                 </svg>
-                <button></button>
-                <span></span>
+                <button class="video-btn">Дивитись відео</button>
+                <span class="video-span"></span>
             </section>
 
-            <section>
-                <div>
-                    <h7></h7>
-                    <p></p>
-                    <button></button>
-                    <p></p>
+            <section class="subcribe">
+                <div class="subcribe-div">
+                    <h7 class="subcribe-title">Підпишіться на нашу розсилку</h7>
+                    <p class="subcribe-text">Корисні статті, акції, новини - отримайте все це зараз!</p>
+                    <button class="subcribe-btn">Підписатися</button>
+                    <p class="subcribe-text">Ми не шлем спам, і не передаємо нікому ваші дані</p>
                 </div>
             </section>
 
-            <section>
-                <ul>
-                    <p></p>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
+            <section class="footer">
+                <ul class="footer-list">
+                    <p class="footer-text">Контактная информация</p>
+                    <li class="footer-item"><a href="" class="footer-link">test@test.ru</a></li>
+                    <li class="footer-item"><a href="" class="footer-link">+3 8096 555 66 99</a></li>
+                    <li class="footer-item"><a href="" class="footer-link">Тернопіль вул С. Бандери</a></li>
                 </ul>
-                <ul>
-                    <p></p>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                <ul class="footer-list">
+                    <p class="footer-text">Основні посилання</p>
+                    <li class="footer-item"><a href="" class="footer-link">Головна</a></li>
+                    <li class="footer-item"><a href="" class="footer-link">Наші проекти</a></li>
+                    <li class="footer-item"><a href="" class="footer-link">Наші послуги</a></li>
+                    <li class="footer-item"><a href="" class="footer-link">Контакти</a></li>
                 </ul>
-                <ul>
-                    <p></p>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                <ul class="footer-list">
+                    <p class="footer-text">Наші проекти</p>
+                    <li class="footer-item"><a href="" class="footer-link">Укрпошта</a></li>
+                    <li class="footer-item"><a href="" class="footer-link">Нафтогаз</a></li>
+                    <li class="footer-item"><a href="" class="footer-link">Львівська пивоварня</a></li>
+                    <li class="footer-item"><a href="" class="footer-link">ТЭЦ Калуша</a></li>
                 </ul>
-                <ul>
-                    <p></p>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                <ul class="footer-list">
+                    <p class="footer-text">Соціальні мережі</p>
+                    <li class="footer-item"><a href="" class="footer-link">LinkedIn</a></li>
+                    <li class="footer-item"><a href="" class="footer-link">Instagram</a></li>
+                    <li class="footer-item"><a href="" class="footer-link">Facebook</a></li>
+                    <li class="footer-item"><a href="" class="footer-link">Twitter</a></li>
                 </ul>
-                <span></span>
-                <p></p>
+                <span class="footer-span"></span>
+                <p class="footer-text">(с) 2019. Всі права захищені</p>
             </section>
         </main>
-    </header>
 </body>
 </html>
