--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <nav class="nav">
+            <!-- <nav class="nav">
                 <ul class="nav-list">
                     <li class="nav-list-item"><a href="" class="nav-list-link current">Головна</a></li>
                     <li class="nav-list-item"><a href="" class="nav-list-link">Наші проекти</a></li>
@@ -23,6 +23,23 @@
                     <li class="nav-list-item"><a href="" class="nav-list-link">Новини</a></li>
                     <li class="nav-list-item"><a href="" class="nav-list-link">Контакти</a></li>
                 </ul>
+            </nav> -->
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li class="nav-list-item"><a href="" class="nav-list-link current">Головна</a></li>
+                    <li class="nav-list-item"><a href="" class="nav-list-link">Наші проекти</a></li>
+                    <li class="nav-list-item"><a href="" class="nav-list-link">Послуги</a></li>
+                    <li class="nav-list-item"><a href="" class="nav-list-link">Новини</a></li>
+                </ul>
+                <ul class="contacts-list">
+                    <li class="contacts-list-item"><a href="" class="contacts-list-link">+38 097 555 67 89</a></li>
+                    <li class="contacts-list-item"><a href="" class="contacts-list-link">itstudio@info.com</a></li>
+                </ul>
+                <button class="nav-btn menu-open-btn">
+                    <svg class="nav-btn-svg" width="24" height="16">
+                        <use href="./symbol-defs.svg#icon-menu"></use>
+                    </svg>
+                </button>
             </nav>
         </div>
     </header>
