--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
                     <li class="nav-list-item"><a href="" class="nav-list-link">Контакти</a></li>
                 </ul>
             </nav>
-            <button class="nav-btn menu-open-btn">
+            <!-- <button class="nav-btn menu-open-btn">
                 <svg class="nav-btn-svg" width="24" height="16">
                     <use href="./symbol-defs.svg#icon-menu"></use>
                 </svg>
-            </button>                
+            </button>                 -->
         </div>
         
-        <div class="mob-menu is-hidden">
+        <!-- <div class="mob-menu is-hidden">
                 <div class="container mob-menu-container">
                     <div class="mob-menu-top">
                         <button type="button" class="menu-btn menu-close-btn">
@@ -59,7 +59,7 @@
                             <li class="social-menu-list-item"><a href="" class="social-menu-list-link">Facebook</a></li>
                             <li class="social-menu-list-item"><a href="" class="social-menu-list-link">LinkedIn</a></li>
                         </ul>
-                    </div>
+                    </div> -->
     </header>
     <main>
         
